# Quadratic-Sieve-Cxx

./: .gitignore  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.in  QS-parallel.h  QS.C  QS.h  debug-cout.h  eratosthenes.C  eratosthenes.h  gmp-patch.c  gmp-patch.h  math-utils.C  math-utils.h  smooth-base.h  smooth-number.h  utils.h
src/linear-algebra/: gauss-elimination.h  matrix.h
tests/: Makefile.am  Makefile.in  test-eratosthenes.C  test-qs.C  test-vector-smooth-number.C
